# multimodal-rag-benchmark

./: .gitignore  CLAUDE.md  README.md  claude_sdk.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/: benchmark-results-analyzer.md  code-reviewer.md  docling-parser-verifier.md  infra-advisor.md  meeting-prep.md  qa-reviewer.md
.claude/commands/: analyze_run.md  audit_ids.md  check_attributed_ids
.claude/hooks/: block_env_read.sh  trigger_docling_verifier.sh  typecheck_on_edit.sh
configs/: aws.yaml  default.yaml
data/altumint/: qa_pairs.json  qa_review.md
data/feedback/: feedback.jsonl
docs/: parse_documents.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
meeting_notes/: changelog.md
pipeline/: __init__.py
pipeline/api/: main.py  pipeline_service.py  schemas.py
pipeline/datasets/: __init__.py  altumint.py  altumint_aws.py  base.py  docvqa.py  docvqa_aws.py  gqa.py  gqa_aws.py  hotpotqa.py  hotpotqa_aws.py
pipeline/evaluation/: __init__.py  answer_metrics.py  answer_metrics_hf.py  grounding_metrics.py  grounding_metrics_ragas.py  multimodal_metrics.py  retrieval_metrics.py  retrieval_metrics_ranx.py
pipeline/models/: __init__.py  base.py  gemini.py  gemini_vertex.py  gpt.py  qwen_vl.py  qwen_vl_aws.py
pipeline/outputs/: research_log.md
pipeline/retrieval/: __init__.py  base.py  bm25.py  clip_qdrant.py  (+12 more)
scripts/: generate_qa.py  generate_qa_aws.py  parse_documents.py  parse_documents_aws.py  port-forward-benchmarking.sh  upload_docvqa_to_s3.py  upload_gqa_to_s3.py  upload_hotpotqa_to_s3.py
(+100 files in other folders)
