[project]
name = "multimodal-rag-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.4",
    "open-clip-torch>=3.3.0",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
